--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/advanced-search/pages/_results.scss
@@ -7,6 +7,7 @@
     border-radius: 0 !important;
     border-bottom: solid 1px $crm-background;
     margin-bottom: 15px !important;
+    box-shadow: none;
   }
 
   .crm-pager {
