AI-57: Fix PR review comments

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_batch.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_batch.scss
@@ -100,7 +100,7 @@
 
         &.label {
           label {
-            padding: 15px 0px 5px 25px;
+            padding: 15px 0 5px 25px;
           }
         }
       }
