AI-62: Adjust page styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-price-set.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-price-set.scss
@@ -30,5 +30,15 @@
         }
       }
     }
+
+    .dataTables_wrapper {
+      overflow: visible;
+    }
+
+    #option11,
+    #options {
+      @include mx-expandable-table();
+      box-shadow: none !important;
+    }
   }
 }
