--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_forms.scss
@@ -199,6 +199,7 @@ $control-height: 30px;
           border-radius: 2px;
           box-shadow: inset 0 0 3px 0 rgba(0, 0, 0, 0.2);
           width: 100%;
+          height: 30px !important;
           box-sizing: border-box;
           font-family: inherit;
           line-height: inherit;
