--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/profiles/_profiles.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/administer/profiles/_profiles.scss
@@ -136,7 +136,7 @@
     }
 
     td.label {
-      padding: 15px 0px 15px 0px;
+      padding: 15px 0 15px 0;
 
       .helpicon {
         padding: 0 5px;
@@ -147,7 +147,7 @@
     td.html-adjust {
       width: 100%;
     }
-    
+
     td {
       vertical-align: middle;
     }
