--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_tooltip.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/_tooltip.scss
@@ -13,7 +13,6 @@
     height: 0;
     border-left: 10px solid transparent;
     border-right: 10px solid transparent;
-
     border-bottom: 10px solid #FFF;
   }
 
@@ -21,35 +20,25 @@
     background-color: #FFF;
     padding: 10px 0 !important;
 
-    .crm-contact_activities-list{
-
-    }
     .crm-contact_actions-list {
       border-color: $crm-background !important;
       width: 175px;
       margin-left: 175px;
       margin-right: 175px;
-      ul {
-        .crm-action-new-case {
-          display: none;
-        }
-        .crm-action-new-relationship {
-          display: none;
-        }
-        .crm-action-new-note {
-          display: none;
-        }
+
+        .crm-action-new-case,
+        .crm-action-new-relationship,
+        .crm-action-new-note,
         .crm-action-tag-contact {
           display: none;
         }
-      }
     }
+
     .crm-contact_print-list{
       width: 175px;
-      ul {
-          .crm-contact-print {
-            display: none;
-          }
+
+      .crm-contact-print {
+        display: none;
       }
     }
 
