AI-74: Adjust cell vertical align

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_new-activity.scss
@@ -274,6 +274,12 @@
         min-height: 100px;
       }
     }
+
+    .crm-activity-form-block-details {
+      td.label {
+        vertical-align: top;
+      }
+    }
   }
 }
 
