AI-38: Adjust tooltip line-height

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tooltip.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tooltip.scss
@@ -32,6 +32,8 @@
       .content {
         font-weight: normal;
         font-size: 13px;
+        line-height: 17px;
+        margin-bottom: 10px;
       }
     }
 
