AI-22: Adjust text case

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_export-contact.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_export-contact.scss
@@ -85,6 +85,7 @@
           height: 47px;
           line-height: 47px;
           border-top-color: $gray-lighter;
+          text-transform: none;
         }
       }
 
