AI-82: Fix nested tables shadow

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/common/_tables.scss
@@ -249,7 +249,8 @@
       }
 
       > td {
-        box-shadow: $box-shadow;
+        box-shadow: $crm-nested-table-box-shadow;
+        position: relative;
       }
 
       #info {
