AI-85: Contact membership - fix compatibility issues

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_memberships.scss
@@ -319,6 +319,16 @@
       }
     }
   }
+
+  table tr td {
+    vertical-align: middle;
+
+    .helpicon {
+      position: relative;
+      bottom: 2px;
+      left: 5px;
+    }
+  }
 }
 
 
