AI-18: Adjust button styling

--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_contributions.scss
@@ -528,6 +528,8 @@
 
     .action-item {
       border-color: $gray-darker !important;
+      border-radius: 2px;
+      padding: 6px 5px;
     }
   }
 
