--- a/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-household.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/civicrm/contact/pages/_add-to-household.scss
@@ -1,4 +1,5 @@
-.CRM_Contact_Form_Task_AddToHousehold {
+.CRM_Contact_Form_Task_AddToHousehold,
+.CRM_Contact_Form_Task_AddToOrganization {
   .form-layout-compressed {
     tr {
       td {
@@ -6,7 +7,7 @@
           padding-left: 20px;
         }
 
-        #_qf_AddToHousehold_refresh {
+        input[id*="_refresh"] {
           color: $crm-white;
           background: $brand-primary;
           border-color: $brand-primary;
@@ -19,7 +20,7 @@
           margin-bottom: 20px !important;
         }
 
-        #_qf_AddToHousehold_cancel {
+        input[id*="_cancel"] {
           color: $gray-darker;
           background: $crm-white;
           border-color: $crm-copy;
