PCHR-1912: Fix style issue for when no items are displayed
https://github.com/angular-ui/ui-select/issues/1652

--- a/org.civicrm.bootstrapcivicrm/scss/bootstrap/components/civihr-ui-select/_overrides.scss
+++ b/org.civicrm.bootstrapcivicrm/scss/bootstrap/components/civihr-ui-select/_overrides.scss
@@ -265,6 +265,7 @@
     border-top: 0 !important;
     border-style: solid;
     border-width: 1px !important;
+    opacity: 1 !important;
 
     @each $id in $tasks-and-assignments {
       @at-root #{$id} & {
