PCHR-1820: Use Upper/Lower Case Consistently Across Provider Types
Health and life insurance provider contact sub-types used capitalized
Snake_Case for names, while Pension Provider used all lower-case snake_case.
Changed "pension_provider" to "Pension_Provider", to make sub-type naming
consistent across all provider types.

Also, added import tests for Health and Life Insurance Providers.

--- a/hrjobcontract/views/modalForm.html
+++ b/hrjobcontract/views/modalForm.html
@@ -784,8 +784,8 @@
                                                 ng-model="entity.pension.pension_type">
                                             <ui-select-match
                                                     placeholder="Start typing a name or email...">{{$select.selected.label}}</ui-select-match>
-                                            <ui-select-choices  repeat="contact.id as contact in contacts.pension_provider | filter: $select.search"
-                                                                refresh="refreshContacts($select.search, 'pension_provider')"
+                                            <ui-select-choices  repeat="contact.id as contact in contacts.Pension_Provider | filter: $select.search"
+                                                                refresh="refreshContacts($select.search, 'Pension_Provider')"
                                                                 refresh-delay="0">
                                                 <div ng-bind="contact.label"></div>
                                                 <small ng-bind="contact.description[0]"></small>
